Prepare application and database for containerization with Docker